# idkit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
idkit/: __init__.py  exceptions.py  id.py  identifier.py  identity.py  idkit.py  protocols.py  root.py
idkit/enums/: __init__.py  group.py  operation.py  role.py  source.py
idkit/namespaces/: __init__.py  group.py  namespace.py  operation.py  role.py  source.py
tests/: test_identifier.py
